updated README and AUTHORS with Jared Heck information

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Kimberly Wong <kjowong@gmail.com>
 Carrie Ybay
 Jared Heck
 Carlos Alvarez <930@holbertonschool.com>
+Edgar Miguel Rodriguez G. <969@holbertonscholl.com>
